[gd_scene load_steps=2 format=3 uid="uid://wa5ej1k467rx"]

[ext_resource type="Script" path="res://ugly_menu.gd" id="1_6avrb"]

[node name="Node" type="Node"]
script = ExtResource("1_6avrb")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="minigame1" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -111.0
offset_right = 111.0
offset_bottom = 61.0
grow_horizontal = 2
text = "mini 1"

[node name="minigame3" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.403646
anchor_top = 0.165123
anchor_right = 0.596354
anchor_bottom = 0.266975
offset_left = -1.14441e-05
offset_right = -2.28882e-05
offset_bottom = 1.33514e-05
grow_horizontal = 2
grow_vertical = 2
text = "mini 3"
metadata/_edit_use_anchors_ = true

[node name="minigame4" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.403646
anchor_top = 0.330247
anchor_right = 0.596354
anchor_bottom = 0.444444
offset_left = -1.14441e-05
offset_right = -2.28882e-05
offset_bottom = 1.33514e-05
grow_horizontal = 2
grow_vertical = 2
text = "mini 4"
metadata/_edit_use_anchors_ = true

[node name="minigame5" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.403646
anchor_top = 0.515432
anchor_right = 0.596354
anchor_bottom = 0.645062
offset_left = -1.14441e-05
offset_right = -2.28882e-05
offset_bottom = 1.33514e-05
grow_horizontal = 2
grow_vertical = 2
text = "mini 5"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="minigame1" to="." method="_on_minigame_1_pressed"]
[connection signal="pressed" from="minigame3" to="." method="_on_minigame_3_pressed"]
[connection signal="pressed" from="minigame4" to="." method="_on_minigame_4_pressed"]
[connection signal="pressed" from="minigame5" to="." method="_on_minigame_5_pressed"]
